# cagnottesolidaire

./: .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
cagnotte_solidaire/: settings.py  urls.py  wsgi.py
cagnottesolidaire/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
cagnottesolidaire/migrations/: 0001_initial.py  0002_rename_projet_cagnotte.py  0002_upgrade_django.py  0003_demande.py
cagnottesolidaire/static/css/: projet.css
cagnottesolidaire/templates/: base.html
cagnottesolidaire/templates/cagnottesolidaire/: cagnotte_detail.html  cagnotte_form.html  cagnotte_list.html  demande_confirm_delete.html  demande_form.html  offre_form.html  offre_list.html  projet_detail.html  projet_list.html  proposition_detail.html  proposition_form.html  proposition_list.html
cagnottesolidaire/templates/registration/: login.html
conf/: gunicorn.conf.py  nginx
projets/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
projets/migrations/: 0001_initial.py  0002_offre_remarques.py  0002_ordering.py  0003_auto_20170324_2253.py
projets/static/css/: projet.css
projets/templates/: base.html
projets/templates/projets/: offre_detail.html  offre_form.html  offre_list.html  projet_detail.html  projet_form.html  projet_list.html  proposition_detail.html  (+2 more)
testproject/: __init__.py  settings.py  tests.py  urls.py
testproject/templates/: base.html
(+10 files in other folders)
