[tool.poetry]
name = "cagnottesolidaire"
version = "2.1.0"
description = ""
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
ndh = "^3.10.4"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
safety = "^1.10.3"
yapf = "^0.31.0"
setuptools-scm = "^6.0.1"
mypy = "^0.910"
pydocstyle = "^6.1.1"
pre-commit = "^2.13.0"
django-stubs = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
