[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = ""
license = "BSD-2-Clause"
name = "cagnottesolidaire"
readme = "README.md"
version = "2.1.0"

[tool.poetry.dependencies]
Pillow = "^8.3.2"
ipython = "^8.11.0"
ndh = "^3.10.4"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = "^5.5"
isort = "^5.12.0"
pre-commit = "^2.11.1"
ruff = "^0.0.254"
safety = {allow-prereleases = true, version = "^2.4.0b1"}

[tool.ruff]
allowed-confusables = [" "]
extend-exclude = ["migrations"]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py310"

[tool.tomlsort]
all = true
